# burn-model-serving

./: .gitignore  Cargo.toml  README.md
.github/workflows/: on-main.yaml  on-pull-request.yaml
models/text-classification/: config.json
src/: inference.rs  lib.rs  main.rs  model.rs  state.rs  training.rs  web.rs
src/data/: dataset.rs  mod.rs  tokenizer.rs  utils.rs
