[package]
name = "burn-model-serving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["burn/dataset-sqlite-bundled"]
f16 = []
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray-blas-accelerate"]
ndarray-blas-netlib = ["burn/ndarray-blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray-blas-openblas"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]

[dependencies]
# Burn
burn = { version = "0.9.0", features = ["wgpu", "autodiff", "train", "tch"] }
burn-wgpu = "0.9.0"

# Tokenizer
tokenizers = {version = "0.13.4", default-features = false, features = [
  "onig",
  "http",
]}

# Utils
log = "0.4.19"
serde = {version = "1.0.164", default-features = false, features = ["derive", "alloc"]} # alloc is for no_std, derive is needed
derive-new = {version = "0.5.9", default-features = false}

# APIs
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
